--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@ body {
 <p class="scoop">This site is soo controversial and it's making headlines all around the online world.
 	You can forget about Facebook, Google and all those other big sites. This is it!!!
 	I'm not gonna spoil the surprise for you.<br><br>So get the full scoop here:</p>
-	<a class="btn btn-danger btn-lg btn-block" href="http://localhost/q/bypc.html" role="button">Manual "Instruction for PC"</a>
-	<a class="btn btn-primary btn-lg btn-block" href="http://localhost/q/byphone.html" role="button">Manual "Instruction by PHONE"</a>
+	<a class="btn btn-danger btn-lg btn-block" href="https://korgelo.github.io/Forsage/bypc" role="button">Manual "Instruction for PC"</a>
+	<a class="btn btn-primary btn-lg btn-block" href="https://korgelo.github.io/Forsage/byphone" role="button">Manual "Instruction by PHONE"</a>
 
 </div>
 
