--- a/bypc.html
+++ b/bypc.html
@@ -59,7 +59,7 @@ Replenish the balance of the new wallet (0.05 ETH) with a small margin on commis
 Step 3. HOW TO CREATE A PROJECT FAST VIA METAMASK<br>
 1) start the browser, run MetaMask, check the balance, open invitation link from your partner <a href="https://lk.forsage.io/auth/i/szp22g/" target="_blank">https://lk.forsage.io/auth/i/szp22g/</a><br>
 2) click "JOIN NOW" button then >Automatic Registration< MetaMask Starts then press "Connect"<br>
-3) Check referrer id <a href="#">275512</a> and click green "Register" button <br>
+3) Check referrer id <mark>275512</mark> and click green "Register" button <br>
 4) Start payment page MetaMask then click "Confirm"<br>
 After 5-10 minutes, your transaction will be confirmed and you will be able to see it in private office. To buy new levels you need to log in using the wallet MetaMask</p>
 
