--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@ body {
 }
 .scoop {
 	color: orange;
+	text-align: center;
 }
 .platform{
 	color: green;
@@ -49,8 +50,10 @@ body {
 </div>
 
 <div class="col-5">
-<h4 class="platform">THE NEW GENERATION PLATFORM</h4>
-<p class="scoop">This site is soo controversial and it's making headlines all around the online world. You can forget about Facebook, Google and all those other big sites. This is it!!! I'm not gonna spoil the surprise for you. Just follow this simple 10 minute instructions and you ready to go. So get the full scoop here.</p>
+<h4 class="platform d-flex justify-content-center">THE NEW GENERATION PLATFORM</h4>
+<img style="background-color: black" src="https://korgelo.github.io/Forsage/Matrix.png" class="rounded mx-auto d-block">
+<p class="scoop lead">This site is soo controversial and it's making headlines all around the online world. You can forget about Facebook, Google and all those other big sites. This is it!!! I'm not gonna spoil the surprise for you. Just follow this simple 10 minute instructions and you ready to go. So get the full scoop here.</p>
+
 	<a class="btn btn-danger btn-lg btn-block" href="https://korgelo.github.io/Forsage/bypc" role="button">Manual "Instruction for PC"</a>
 	<a class="btn btn-primary btn-lg btn-block" href="https://korgelo.github.io/Forsage/byphone" role="button">Manual "Instruction by PHONE"</a>
 
