--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ body {
 <div class="col-5">
 <h4 class="platform d-flex justify-content-center">THE NEW GENERATION PLATFORM</h4>
 <img style="background-color: black" src="https://korgelo.github.io/Forsage/Matrix.png" class="rounded mx-auto d-block">
-<p class="scoop lead">This site is soo controversial and it's making headlines all around the online world. You can forget about Facebook, Google and all those other big sites. This is it!!! I'm not gonna spoil the surprise for you. Just follow this simple 10 minute instructions and you ready to go. So get the full scoop here.</p>
+<p class="scoop">Soon the website will be on a decentralized domain. (IPFS)InterPlanetary File System. This will make it the first interplanetary matrix project in history. No Admin Needed to Run/ can't be shut down. No chance of scamming out as no one can alter the smart contract. Forsage is leading among all MLM projects on a smart contract (according to DappRadar). Marketing is the most thoughtful and long-term. People's crypto is always in people's wallets. (decentralized) Anyone can join with as little as .05 Eth. Supportive team group chat, resources, ad-coop, live webinars and so much more.</p>
 
 	<a class="btn btn-danger btn-lg btn-block" href="https://korgelo.github.io/Forsage/bypc" role="button">Manual "Instruction for PC"</a>
 	<a class="btn btn-primary btn-lg btn-block" href="https://korgelo.github.io/Forsage/byphone" role="button">Manual "Instruction by PHONE"</a>
