--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ body {
 <body>
 <div class="container"><br>
 <nav class="navbar d-flex justify-content-center navbar-dark bg-dark">
-<h1 class="display-4 heading">THE FIRST EVER 100% DECENTRALIZED:</h1>
+<h1 class="display-4 heading">THE FIRST EVER 100% DECENTRALIZED</h1>
 </nav>
 <br>
 <div class="row d-flex justify-content-center">
@@ -51,11 +51,15 @@ body {
 
 <div class="col-5">
 <h4 class="platform d-flex justify-content-center">THE NEW GENERATION PLATFORM</h4>
-<img style="background-color: black" src="https://korgelo.github.io/Forsage/Matrix.png" class="rounded mx-auto d-block">
-<p class="scoop">Soon the website will be on a decentralized domain. (IPFS)InterPlanetary File System. This will make it the first interplanetary matrix project in history. No Admin Needed to Run/ can't be shut down. No chance of scamming out as no one can alter the smart contract. Forsage is leading among all MLM projects on a smart contract (according to DappRadar). Marketing is the most thoughtful and long-term. People's crypto is always in people's wallets. (decentralized) Anyone can join with as little as .05 Eth. Supportive team group chat, resources, ad-coop, live webinars and so much more.</p>
+<img width="200" height="200" src="https://korgelo.github.io/Forsage/cat_figure.png" class="rounded mx-auto d-block"><br>
+<!-- <p class="scoop">Soon the website will be on a decentralized domain. (IPFS)InterPlanetary File System. This will make it the first interplanetary matrix project in history. No Admin Needed to Run/ can't be shut down. No chance of scamming out as no one can alter the smart contract. Forsage is leading among all MLM projects on a smart contract (according to DappRadar). Marketing is the most thoughtful and long-term. People's crypto is always in people's wallets. (decentralized) Anyone can join with as little as .05 Eth. Supportive team group chat, resources, ad-coop, live webinars and so much more.</p> -->
+<a class="btn btn-danger btn-lg btn-block" href="https://korgelo.github.io/Forsage/bypc" role="button">Manual "Instruction for PC"</a>
+<a class="btn btn-primary btn-lg btn-block" href="https://korgelo.github.io/Forsage/byphone" role="button">Manual "Instruction by PHONE"</a>
+<!-- <img style="background-color: black" src="https://korgelo.github.io/Forsage/Matrix.png" class="rounded mx-auto d-block"> -->
 
-	<a class="btn btn-danger btn-lg btn-block" href="https://korgelo.github.io/Forsage/bypc" role="button">Manual "Instruction for PC"</a>
-	<a class="btn btn-primary btn-lg btn-block" href="https://korgelo.github.io/Forsage/byphone" role="button">Manual "Instruction by PHONE"</a>
+
+
+
 
 </div>
 
