--- a/byphone.html
+++ b/byphone.html
@@ -40,7 +40,7 @@ body {
 <body>
 <div class="container"><br>
 <nav class="navbar d-flex justify-content-center navbar-dark bg-dark">
-<h1 class="display-4 heading">THE FIRST EVER 100% DECENTRALIZED:</h1>
+<!-- <h1 class="display-4 heading">THE FIRST EVER 100% DECENTRALIZED:</h1> -->
 </nav>
 <br>
 <div class="row d-flex justify-content-center">
