--- a/index.html
+++ b/index.html
@@ -26,13 +26,15 @@ body {
 }
 .heading {
 	color: orange;
-
+	font-size: 50px;
+	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 .scoop {
 	color: orange;
 	text-align: center;
 }
 .platform{
+	font-style: italic;
 	color: green;
 }
 </style>
@@ -40,7 +42,7 @@ body {
 <body>
 <div class="container"><br>
 <nav class="navbar d-flex justify-content-center navbar-dark bg-dark">
-<h1 class="display-4 heading">THE FIRST EVER 100% DECENTRALIZED</h1>
+<h1 class="heading">THE FIRST EVER 100% DECENTRALIZED</h1>
 </nav>
 <br>
 <div class="row d-flex justify-content-center">
