--- a/byphone.html
+++ b/byphone.html
@@ -31,8 +31,10 @@ body {
 }
 .scoop {
 	color: orange;
+	font-style: oblique;
 }
 .platform{
+	font-style: italic;
 	color: green;
 }
 </style>
@@ -50,7 +52,7 @@ body {
 </div>
 
 <div class="col-5">
-<h2 class="platform">How to Register By PHONE</h1>
+<h2 class="platform">How to Register By PHONE</h2>
 <p class="scoop">
 1. Install <a href="https://trustwallet.com/" target="_blank">Trust Wallet</a> on your phone from Google play store.<br>
 2. After installation of the Trust Wallet app.<br>
