--- a/bypc.html
+++ b/bypc.html
@@ -30,8 +30,10 @@ body {
 }
 .scoop {
 	color: orange;
+	font-style: oblique;
 }
-.platform{
+.platform {
+	font-style: italic;
 	color: green;
 }
 </style>
@@ -49,7 +51,7 @@ body {
 </div>
 
 <div class="col-5">
-<h2 class="platform">How to Register from PC</h1>
+<h2 class="platform">How to Register from PC</h2>
 <p class="scoop">
 Step 1. HOW TO INSTALL METAMASK ETH WALLET<br>
 1. Install Metamask extension in your browser: <a href="https://metamask.io/" target="_blank">Metamask.io</a><br>
