--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@ body {
 <br>
 <div class="row d-flex justify-content-center">
 
-<div class="col-7 embed-responsive embed-responsive-16by9">
-<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/-ttjwpzjWeY?autoplay=1" allow="autoplay" allowfullscreen></iframe>
+<div class="col-7 d-flex justify-content-center ">
+<iframe class="embed-responsive embed-responsive-21by9" src="https://www.youtube.com/embed/-ttjwpzjWeY?autoplay=1" frameborder="0" allow="autoplay" allowfullscreen></iframe>
 </div>
 
 <div class="col-5">
@@ -59,7 +59,6 @@ body {
 </div>
 </div>
 </div>
-</nav>
 
 </body>
 </html>
