--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ body {
 </style>
 </head>
 <body>
-<div class="container"><br>
+<div class="container">
 <nav class="navbar d-flex justify-content-center navbar-dark bg-dark">
 <h1 class="heading">THE FIRST EVER 100% DECENTRALIZED</h1>
 </nav>
@@ -57,8 +57,23 @@ body {
 <a class="btn btn-danger btn-lg btn-block" href="https://korgelo.github.io/Forsage/bypc" role="button">Manual "Instruction for PC"</a>
 <a class="btn btn-primary btn-lg btn-block" href="https://korgelo.github.io/Forsage/byphone" role="button">Manual "Instruction by PHONE"</a>
 </div>
-</div>
-</div>
+</div><br>
 
+<!-- TradingView Widget BEGIN -->
+<div class="tradingview-widget-container">
+
+  <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-symbol-info.js" async>
+  {
+  "symbol": "COINBASE:ETHBTC",
+  "width": "100%",
+  "locale": "en",
+  "colorTheme": "dark",
+  "isTransparent": false,
+  "largeChartUrl": "https://www.tradingview.com/gopro/?share_your_love=GeloA"
+}
+  </script>
+</div>
+<!-- TradingView Widget END -->
+</div>
 </body>
 </html>
