--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ body {
   "locale": "en",
   "colorTheme": "dark",
   "isTransparent": false,
-  "largeChartUrl": "https://www.tradingview.com/gopro/?share_your_love=GeloA"
+  "largeChartUrl": "https://forsage.io/i/szp22g/"
 }
   </script>
 </div>
