--- a/bypc.html
+++ b/bypc.html
@@ -46,8 +46,8 @@ body {
 <br>
 <div class="row d-flex justify-content-center">
 
-<div class="col-7 embed-responsive embed-responsive-16by9">
-<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/dtUDtdI1hWw?autoplay=1" allow="autoplay" allowfullscreen></iframe>
+<div class="col-7 d-flex justify-content-center">
+<iframe class="embed-responsive embed-responsive-21by9" src="https://www.youtube.com/embed/dtUDtdI1hWw?autoplay=1" allow="autoplay" allowfullscreen></iframe>
 </div>
 
 <div class="col-5">
